# notes_code

./: Bali.md  docker_compose_notes.md  git.md  linux.md  pyproject.toml  sqlite_notes.md  tg-bot_0.01-test.md  ВК_ГВС.ipynb
00_Communication/: 00_Resources.md
00_Communication/info_partners/: faufcc_friends.ipynb
01_FAUFCC/: 01_auto_analysis.ipynb  01_processed_data.csv
01_FAUFCC/IFC_Python/: ifc_analyzer.py  ifc_dataset_builder.py  ifc_element_inspector.py  ifc_loader.py  ifc_test.ipynb
01_FAUFCC/auto_KSI/: 03_test_ksi.ipynb
01_FAUFCC/auto_semantic/: 01_processed_data.csv  04_auto_analysis.ipynb  csv_processor.py  df_vizualizer.py  patterns.json  processed_data.csv  processed_data_SP89.csv  sentence_processor.py
01_FAUFCC/data/: 06_Com.csv  1.csv  16_Sti.csv  input_SP477.csv
01_FAUFCC/semantic/: 02_test_vector_text_comparison.ipynb  ksi_test_auto.ipynb  output.csv  semantic_mid.ipynb  table_01.xml  table_02.xml  table_03.xml  table_04.xml
03_DevOps/: docker_compose_notes.md  linux.md  portainer.md  vpn.md
05_DB/: sql_notes.md  sqlite_notes.md
06_Git/: change_history.md
C#/: 0_general.md
NLP/: 00_text_date_hints.ipynb  01_regexp.ipynb
NLP/03_section/: 01_tokenization.ipynb  spacy_basics.ipynb
git/: config.md
regulation_in_constructions/: read_later.md
semantic/: 01_ideas.ipynb  03_test_ksi.ipynb  04_auto_analysis.ipynb  csv_html_parse.py  csv_processor.py  data_SP60.csv  ideas.ipynb  input_SP60.csv  logic_signs.md  semantic_analysis.ipynb  semantic_mid.ipynb  table.xml  Выгрузка.txt
semantic/00_OWL/: university_ontology.html
(+62 files in other folders)
