[project]
name = "notes-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ifcopenshell>=0.8.1.post1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "owlready2>=0.47",
    "pandas>=2.2.3",
    "pyvis>=0.3.2",
    "rdflib>=7.1.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.1",
    "spacy>=3.8.4",
    "vedo>=2025.5.3",
    "wheel>=0.45.1",
]
